| Bug #26194 | mysqlbinlog --base64-output produces invalid SQL | ||
|---|---|---|---|
| Submitted: | 8 Feb 2007 20:18 | Modified: | 4 Apr 2007 4:18 |
| Reporter: | Guilhem Bichot | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Replication | Severity: | S3 (Non-critical) |
| Version: | 5.1-bk | OS: | Linux (linux) |
| Assigned to: | Guilhem Bichot | Target Version: | |
[8 Feb 2007 20:18]
Guilhem Bichot
[9 Feb 2007 13:15]
Guilhem Bichot
adding Mats as he knows this code best
[9 Feb 2007 14:18]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/19618 ChangeSet@1.2373, 2007-02-09 16:16:01+01:00, guilhem@gbichot3.local +5 -0 Fix for BUG#26194 "mysqlbinlog --base64-output produces invalid SQL"; when it was printing a Query event, it produced invalid SQL (missing the BINLOG keyword, so the SQL started with the base64 string, which is incorrect). Note: the .test will NOT be pushed; indeed, it triggers BUG#20929 ("BINLOG command causes invalid free") and so gives Valgrind warnings or crashes mysqld. Instead, I'll ship this test to the fixer of BUG#20929 for her/him to push when she/he fixes BUG#20929.
[19 Mar 2007 18:00]
Chuck Bell
Patch works as described. Tested on Windows XP.
[22 Mar 2007 10:27]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/22596 ChangeSet@1.2373, 2007-03-22 11:24:27+01:00, guilhem@gbichot3.local +3 -0 Fix for BUG#26194 "mysqlbinlog --base64-output produces invalid SQL"; when it was printing a Query event, it produced invalid SQL (missing the BINLOG keyword, so the SQL started with the base64 string, which is incorrect). Note: no testcase; I have a .test which shows that the bugfix works, but it triggers BUG#26361 and so gives Valgrind warnings. I'm sending this test to the fixer of BUG#26361 for her/him to push when she/he fixes BUG#26361.
[22 Mar 2007 16:34]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/22660 ChangeSet@1.2479, 2007-03-22 17:31:39+01:00, guilhem@gbichot3.local +4 -0 Fix for BUG#26194 "mysqlbinlog --base64-output produces invalid SQL"; when it was printing a Query event, it produced invalid SQL (missing the BINLOG keyword, so the SQL started with the base64 string, which is incorrect). Note: no testcase; I have a .test which shows that the bugfix works, but it triggers BUG#26361 and so gives Valgrind warnings. I'm sending this test to the fixer of BUG#26361 for her/him to push when she/he fixes BUG#26361.
[22 Mar 2007 18:25]
Guilhem Bichot
pushed to 5.1-rpl
[31 Mar 2007 23:55]
Bugs System
Pushed into 5.1.18-beta
[4 Apr 2007 4:18]
Paul DuBois
Noted in 5.1.18 changelog.
